# tax_rolls

./: Cargo.toml  README.md
pdf2csv/: Cargo.toml
pdf2csv/src/: main.rs
pdf2csv/txts/: vienna_23.txt
trui-axum/: Cargo.toml  README.md  todos.db
trui-axum/src/: darkmode.rs  fallback.rs  lib.rs  main.rs  rolls.rs  todo.rs
